# cpp-training

./: .gitignore  README.md
01-fundamentals/examples/: data_types_demo  data_types_demo.cpp  hello_world  hello_world.cpp
01-fundamentals/exercises/: README.md
01-fundamentals/solutions/: exercise1_personal_info.cpp
01-fundamentals/theory/: 01-introduction.md  02-variables-datatypes.md
02-object-oriented/theory/: 01-classes-objects.md
04-modern-cpp/theory/: 01-smart-pointers.md
06-templates-generics/theory/: 01-function-templates.md
09-best-practices/theory/: 01-coding-standards.md
10-projects/01-library-management-system/: CMakeLists.txt  README.md
